--- a/docs/vocs/docs/pages/cli/reth/db.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db.mdx
@@ -20,6 +20,7 @@ Commands:
   static-file-header  Reads and displays the static file segment header
   version             Lists current and local database versions
   path                Returns the full database path
+  settings            Manage storage settings
   help                Print this message or the help of the given subcommand(s)
 
 Options:
