--- a/docs/vocs/docs/pages/cli/reth/stage/unwind.mdx
+++ b/docs/vocs/docs/pages/cli/reth/stage/unwind.mdx
@@ -101,7 +101,7 @@ Static Files:
       --static-files.blocks-per-file.receipts <BLOCKS_PER_FILE_RECEIPTS>
           Number of blocks per file for the receipts segment
 
-      --static-files.blocks-per-file.transaction_senders <BLOCKS_PER_FILE_TRANSACTION_SENDERS>
+      --static-files.blocks-per-file.transaction-senders <BLOCKS_PER_FILE_TRANSACTION_SENDERS>
           Number of blocks per file for the transaction senders segment
 
       --static-files.receipts
