make update-book-cli

--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -29,6 +29,7 @@
         - [`reth db settings set`](../cli/reth/db/settings/set.mdx)
           - [`reth db settings set receipts_in_static_files`](../cli/reth/db/settings/set/receipts_in_static_files.mdx)
           - [`reth db settings set transaction_senders_in_static_files`](../cli/reth/db/settings/set/transaction_senders_in_static_files.mdx)
+      - [`reth db account-storage`](../cli/reth/db/account-storage.mdx)
     - [`reth download`](../cli/reth/download.mdx)
     - [`reth stage`](../cli/reth/stage.mdx)
       - [`reth stage run`](../cli/reth/stage/run.mdx)
