--- a/docs/vocs/docs/pages/cli/reth/db.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db.mdx
@@ -21,6 +21,7 @@ Commands:
   version             Lists current and local database versions
   path                Returns the full database path
   settings            Manage storage settings
+  account-storage     Gets storage size information for an account
   help                Print this message or the help of the given subcommand(s)
 
 Options:
