docs(trace): fix trace_call method invocation table

--- a/docs/vocs/docs/pages/jsonrpc/trace.mdx
+++ b/docs/vocs/docs/pages/jsonrpc/trace.mdx
@@ -178,7 +178,7 @@ The third and optional parameter is a block number, block hash, or a block tag (
 
 | Client | Method invocation                                              |
 | ------ | -------------------------------------------------------------- |
-| RPC    | `{"method": "trace_callMany", "params": [trace[], block]}` |
+| RPC    | `{"method": "trace_call", "params": [tx, ["trace"|"vmTrace"|"stateDiff"], block]}` |
 
 ### Example
 
