feat: add StaticFileSegment::AccountChangeSets
chore: add changeset info to segment header

feat(provider): implement append_account_changeset

chore: formatting and more TODOs

chore: add stub for account_before_block

fix: use proper value for account changeset static files

feat: impl binary search for address in changeset

feat: finish writer fn, add tests

chore: add fallback to db when not found in static files

feat: add account_changesets_range to ChangesetReader

feat: add support for account changesets in IndexAccountHistory

feat: add support for account changesets in static file producer

chore: serialization changes

feat: add support for account changesets in db get

chore: docs and attempt to fix db get

fix: properly upgrade segment header serialize / deserialize

feat: add read-only segments

feat: add cli flag for enabling v2 static files

chore: remove Segment for AccountChangeSets

chore: add unreachable! for unreachable db get branch

chore: remove noisy traces

chore: make binary search more concise

feat: add support for account changeset static file pruning

feat: make HashedPostState::from_reverts work with static files

fix: don't write to db

chore: update book cli

chore: make clippy happy

chore: fix test compilation

chore: fix feat propagation

feat: add StaticFileRangeWalker skeleton

fix: fix inclusive ranges

feat: impl removal for changesets in exec unwind

chore: replace prefixsetloader with fn that uses provider

chore(trie): propagate errors from root methods

chore: make clippy happy

chore: no underscores

chore(static-file): call increment_block when appending account changesets

chore(merkle-changesets): add logs for changeset reverts

fix: return 0 for start

feat: add account_changeset_count to ChangeSetReader

fix: introduce walker to prevent OOM in IndexAccountHistory

fix: remove static file v2 read-only segment stuff

chore: remove traces

feat: add storage_settings branches

chore: backwards compat segment header writ

--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -27,8 +27,9 @@
       - [`reth db settings`](./reth/db/settings.mdx)
         - [`reth db settings get`](./reth/db/settings/get.mdx)
         - [`reth db settings set`](./reth/db/settings/set.mdx)
-          - [`reth db settings set receipts_in_static_files`](./reth/db/settings/set/receipts_in_static_files.mdx)
-          - [`reth db settings set transaction_senders_in_static_files`](./reth/db/settings/set/transaction_senders_in_static_files.mdx)
+          - [`reth db settings set receipts`](./reth/db/settings/set/receipts.mdx)
+          - [`reth db settings set transaction_senders`](./reth/db/settings/set/transaction_senders.mdx)
+          - [`reth db settings set account_changesets`](./reth/db/settings/set/account_changesets.mdx)
       - [`reth db account-storage`](./reth/db/account-storage.mdx)
     - [`reth download`](./reth/download.mdx)
     - [`reth stage`](./reth/stage.mdx)
@@ -79,8 +80,9 @@
       - [`op-reth db settings`](./op-reth/db/settings.mdx)
         - [`op-reth db settings get`](./op-reth/db/settings/get.mdx)
         - [`op-reth db settings set`](./op-reth/db/settings/set.mdx)
-          - [`op-reth db settings set receipts_in_static_files`](./op-reth/db/settings/set/receipts_in_static_files.mdx)
-          - [`op-reth db settings set transaction_senders_in_static_files`](./op-reth/db/settings/set/transaction_senders_in_static_files.mdx)
+          - [`op-reth db settings set receipts`](./op-reth/db/settings/set/receipts.mdx)
+          - [`op-reth db settings set transaction_senders`](./op-reth/db/settings/set/transaction_senders.mdx)
+          - [`op-reth db settings set account_changesets`](./op-reth/db/settings/set/account_changesets.mdx)
       - [`op-reth db account-storage`](./op-reth/db/account-storage.mdx)
     - [`op-reth stage`](./op-reth/stage.mdx)
       - [`op-reth stage run`](./op-reth/stage/run.mdx)
