--- a/docs/vocs/docs/pages/cli/reth/db/static-file-header/block.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/static-file-header/block.mdx
@@ -17,6 +17,7 @@ Arguments:
           - transactions:        Static File segment responsible for the `Transactions` table
           - receipts:            Static File segment responsible for the `Receipts` table
           - transaction-senders: Static File segment responsible for the `TransactionSenders` table
+          - account-change-sets: Static File segment responsible for the `AccountChangeSets` table
 
   <BLOCK>
           Block number to query
