--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -45,14 +45,14 @@ Metrics:
       --metrics.prometheus.push.username <USERNAME>
           Username for HTTP Basic Authentication to the push gateway.
 
-          Must be used together with `--metrics.prometheus.push.password`. Only applies when a push gateway URL is configured.
+          Only applies when push gateway URL is configured.
 
           [env: RETH_METRICS_PUSH_USERNAME=]
 
       --metrics.prometheus.push.password <PASSWORD>
           Password for HTTP Basic Authentication to the push gateway.
 
-          Must be used together with `--metrics.prometheus.push.username`. Only applies when a push gateway URL is configured.
+          Only applies when push gateway URL and username are configured.
 
           [env: RETH_METRICS_PUSH_PASSWORD=]
 
