--- a/docs/vocs/docs/pages/cli/op-reth/db/repair-trie.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/db/repair-trie.mdx
@@ -12,6 +12,11 @@ Options:
       --dry-run
           Only show inconsistencies without making any repairs
 
+      --metrics <ADDR:PORT>
+          Enable Prometheus metrics.
+
+          The metrics will be served at the given interface and port.
+
   -h, --help
           Print help (see a summary with '-h')
 
