make options non-configurable

--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -606,6 +606,8 @@ TxPool:
       --txpool.locals <LOCALS>
           Flag to allow certain addresses as local
 
+          [default: ]
+
       --txpool.no-local-transactions-propagation
           Flag to toggle local transaction propagation
 
