fix: lint error

--- a/docs/vocs/docs/pages/cli/op-reth/import-op.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/import-op.mdx
@@ -27,6 +27,12 @@ Datadir:
       --datadir.static-files <PATH>
           The absolute path to store static files in.
 
+      --datadir.min-free-disk <MB>
+          Minimum free disk space in MB, once reached triggers auto shut down (default = 0,
+          disabled).
+
+          [default: 0]
+
       --config <FILE>
           The path to the configuration file to use
 
