--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -71,6 +71,12 @@ Datadir:
       --datadir.static-files <PATH>
           The absolute path to store static files in.
 
+      --datadir.min-free-disk <MB>
+          Minimum free disk space in MB, once reached triggers auto shut down (default = 0,
+          disabled).
+
+          [default: 0]
+
 Networking:
   -d, --disable-discovery
           Disable the discovery service
