--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -315,6 +315,9 @@ RPC:
       --http.corsdomain <HTTP_CORSDOMAIN>
           Http Corsdomain to allow request from
 
+      --http.vhosts <HTTP_VHOSTS>
+          Comma separated list of virtual hostnames from which to accept HTTP requests (server enforced). Accepts '*' wildcard
+
       --ws
           Enable the WS-RPC server
 
@@ -330,6 +333,9 @@ RPC:
 
       --ws.origins <ws.origins>
           Origins from which to accept `WebSocket` requests
+
+      --ws.vhosts <WS_VHOSTS>
+          Comma separated list of virtual hostnames from which to accept `WebSocket` requests (server enforced). Accepts '*' wildcard
 
       --ws.api <WS_API>
           Rpc Modules to be configured for the WS server
