docs: fix pruning segments list and config field name

--- a/docs/vocs/docs/pages/run/configuration.mdx
+++ b/docs/vocs/docs/pages/run/configuration.mdx
@@ -286,7 +286,7 @@ refill_slots_interval = '5s'
 trusted_nodes = []
 # Whether reth will only attempt to connect to the peers specified above,
 # or if it will connect to other peers in the network
-connect_trusted_nodes_only = false
+trusted_nodes_only = false
 # Maximum number of backoff attempts before we drop a non-trusted peer
 max_backoff_count = 5
 # DNS resolution refresh interval for trusted nodes
