--- a/docs/vocs/docs/pages/run/faq/pruning.mdx
+++ b/docs/vocs/docs/pages/run/faq/pruning.mdx
@@ -117,6 +117,7 @@ independently of each other:
 -   Receipts
 -   Account History
 -   Storage History
+-   Bodies History
 
 Pruning of each of these segments disables different RPC methods, because the historical data or lookup indexes
 become unavailable.
