docs: document optional block param for trace_rawTransaction

--- a/docs/vocs/docs/pages/jsonrpc/trace.mdx
+++ b/docs/vocs/docs/pages/jsonrpc/trace.mdx
@@ -288,9 +288,9 @@ The second and optional parameter is a block number, block hash, or a block tag 
 
 Traces a call to `eth_sendRawTransaction` without making the call, returning the traces.
 
-| Client | Method invocation                                                     |
-| ------ | --------------------------------------------------------------------- |
-| RPC    | `{"method": "trace_rawTransaction", "params": [raw_tx, type[]]}` |
+| Client | Method invocation                                                                |
+| ------ | -------------------------------------------------------------------------------- |
+| RPC    | `{"method": "trace_rawTransaction", "params": [raw_tx, type[], block]}` |
 
 ### Example
 
