docs(cli): add `reth report` command documentation
Add CLI documentation for the new top-level `reth report` command
for both reth and op-reth binaries.

Changes:
- Add docs/vocs/docs/pages/cli/reth/report.mdx
- Add docs/vocs/docs/pages/cli/op-reth/report.mdx
- Update sidebar-cli-reth.ts and sidebar-cli-op-reth.ts
- Update SUMMARY.mdx with report command links

Signed-off-by: Hwangjae Lee <meetrick@gmail.com>

--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -51,6 +51,7 @@
     - [`reth config`](./reth/config.mdx)
     - [`reth prune`](./reth/prune.mdx)
     - [`reth re-execute`](./reth/re-execute.mdx)
+    - [`reth report`](./reth/report.mdx)
   - [`op-reth`](./op-reth.mdx)
     - [`op-reth node`](./op-reth/node.mdx)
     - [`op-reth init`](./op-reth/init.mdx)
@@ -102,3 +103,4 @@
     - [`op-reth config`](./op-reth/config.mdx)
     - [`op-reth prune`](./op-reth/prune.mdx)
     - [`op-reth re-execute`](./op-reth/re-execute.mdx)
+    - [`op-reth report`](./op-reth/report.mdx)
