feat: add StaticFileSegment::StorageChangeSets

--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -35,6 +35,7 @@
           - [`reth db settings set storages_history`](./reth/db/settings/set/storages_history.mdx)
           - [`reth db settings set transaction_hash_numbers`](./reth/db/settings/set/transaction_hash_numbers.mdx)
           - [`reth db settings set account_history`](./reth/db/settings/set/account_history.mdx)
+          - [`reth db settings set storage_changesets`](./reth/db/settings/set/storage_changesets.mdx)
       - [`reth db account-storage`](./reth/db/account-storage.mdx)
     - [`reth download`](./reth/download.mdx)
     - [`reth stage`](./reth/stage.mdx)
@@ -93,6 +94,7 @@
           - [`op-reth db settings set storages_history`](./op-reth/db/settings/set/storages_history.mdx)
           - [`op-reth db settings set transaction_hash_numbers`](./op-reth/db/settings/set/transaction_hash_numbers.mdx)
           - [`op-reth db settings set account_history`](./op-reth/db/settings/set/account_history.mdx)
+          - [`op-reth db settings set storage_changesets`](./op-reth/db/settings/set/storage_changesets.mdx)
       - [`op-reth db account-storage`](./op-reth/db/account-storage.mdx)
     - [`op-reth stage`](./op-reth/stage.mdx)
       - [`op-reth stage run`](./op-reth/stage/run.mdx)
