--- a/docs/vocs/docs/pages/cli/reth/db/settings/set.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/settings/set.mdx
@@ -15,6 +15,7 @@ Commands:
   storages_history          Store storage history in rocksdb instead of MDBX
   transaction_hash_numbers  Store transaction hash to number mapping in rocksdb instead of MDBX
   account_history           Store account history in rocksdb instead of MDBX
+  storage_changesets        Store storage changesets in static files instead of the database
   help                      Print this message or the help of the given subcommand(s)
 
 Options:
