--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -30,6 +30,9 @@
           - [`reth db settings set receipts`](./reth/db/settings/set/receipts.mdx)
           - [`reth db settings set transaction_senders`](./reth/db/settings/set/transaction_senders.mdx)
           - [`reth db settings set account_changesets`](./reth/db/settings/set/account_changesets.mdx)
+          - [`reth db settings set storages_history_rocksdb`](./reth/db/settings/set/storages_history_rocksdb.mdx)
+          - [`reth db settings set transaction_hash_numbers_rocksdb`](./reth/db/settings/set/transaction_hash_numbers_rocksdb.mdx)
+          - [`reth db settings set account_history_rocksdb`](./reth/db/settings/set/account_history_rocksdb.mdx)
       - [`reth db account-storage`](./reth/db/account-storage.mdx)
     - [`reth download`](./reth/download.mdx)
     - [`reth stage`](./reth/stage.mdx)
@@ -83,6 +86,9 @@
           - [`op-reth db settings set receipts`](./op-reth/db/settings/set/receipts.mdx)
           - [`op-reth db settings set transaction_senders`](./op-reth/db/settings/set/transaction_senders.mdx)
           - [`op-reth db settings set account_changesets`](./op-reth/db/settings/set/account_changesets.mdx)
+          - [`op-reth db settings set storages_history_rocksdb`](./op-reth/db/settings/set/storages_history_rocksdb.mdx)
+          - [`op-reth db settings set transaction_hash_numbers_rocksdb`](./op-reth/db/settings/set/transaction_hash_numbers_rocksdb.mdx)
+          - [`op-reth db settings set account_history_rocksdb`](./op-reth/db/settings/set/account_history_rocksdb.mdx)
       - [`op-reth db account-storage`](./op-reth/db/account-storage.mdx)
     - [`op-reth stage`](./op-reth/stage.mdx)
       - [`op-reth stage run`](./op-reth/stage/run.mdx)
