--- a/docs/vocs/docs/pages/cli/reth/db/settings/set.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/settings/set.mdx
@@ -9,10 +9,13 @@ $ reth db settings set --help
 Usage: reth db settings set [OPTIONS] <COMMAND>
 
 Commands:
-  receipts             Store receipts in static files instead of the database
-  transaction_senders  Store transaction senders in static files instead of the database
-  account_changesets   Store account changesets in static files instead of the database
-  help                 Print this message or the help of the given subcommand(s)
+  receipts                          Store receipts in static files instead of the database
+  transaction_senders               Store transaction senders in static files instead of the database
+  account_changesets                Store account changesets in static files instead of the database
+  storages_history_rocksdb          Store storages history in RocksDB instead of the database
+  transaction_hash_numbers_rocksdb  Store transaction hash numbers in RocksDB instead of the database
+  account_history_rocksdb           Store account history in RocksDB instead of the database
+  help                              Print this message or the help of the given subcommand(s)
 
 Options:
   -h, --help
