--- a/docs/vocs/docs/pages/cli/reth/db/settings/set.mdx
+++ b/docs/vocs/docs/pages/cli/reth/db/settings/set.mdx
@@ -12,6 +12,9 @@ Commands:
   receipts             Store receipts in static files instead of the database
   transaction_senders  Store transaction senders in static files instead of the database
   account_changesets   Store account changesets in static files instead of the database
+  storages_history     Store storages history in RocksDB instead of MDBX
+  account_history      Store account history in RocksDB instead of MDBX
+  tx_hash_numbers      Store transaction hash numbers in RocksDB instead of MDBX
   help                 Print this message or the help of the given subcommand(s)
 
 Options:
