feat(mdbx): add transaction cloning for MVCC snapshot sharing
Introduces mdbx_txn_clone support to fix cache misses during payload validation
when persistence advances the database tip while proof workers are operating.

Key changes:
- Update vendored libmdbx from v0.13.7 to v0.14.1.273 (includes mdbx_txn_clone)
- Add Transaction::clone_snapshot() for cloning read-only MDBX transactions
- Add CloneableProvider/CloneableProviderFactory traits for provider-level cloning
- Implement CloneableProviderFactory for OverlayStateProviderFactory
- Update ProofTaskCtx to support origin provider for MVCC snapshot sharing
- Proof workers now use database_provider_ro_cloned() when origin is set

This allows all proof task workers to read from the same database snapshot,
eliminating the anchor mismatch issue that causes ~34% cache misses when
persistence runs mid-validation.

--- a/crates/storage/libmdbx-rs/mdbx-sys/libmdbx/man1/mdbx_copy.1
+++ b/crates/storage/libmdbx-rs/mdbx-sys/libmdbx/man1/mdbx_copy.1
@@ -1,8 +1,8 @@
-.\" Copyright 2015-2025 Leonid Yuriev <leo@yuriev.ru>.
+.\" Copyright 2015-2026 Leonid Yuriev <leo@yuriev.ru>.
 .\" Copyright 2015,2016 Peter-Service R&D LLC <http://billing.ru/>.
 .\" Copyright 2012-2015 Howard Chu, Symas Corp. All Rights Reserved.
 .\" Copying restrictions apply.  See COPYRIGHT/LICENSE.
-.TH MDBX_COPY 1 "2024-08-29" "MDBX 0.13"
+.TH MDBX_COPY 1 "2025-01-14" "MDBX 0.14"
 .SH NAME
 mdbx_copy \- MDBX environment copy tool
 .SH SYNOPSIS
@@ -13,6 +13,8 @@ mdbx_copy \- MDBX environment copy tool
 .BR \-q ]
 [\c
 .BR \-c ]
+[\c
+.BR \-f ]
 [\c
 .BR \-d ]
 [\c
@@ -48,6 +50,9 @@ Compact while copying. Only current data pages will be copied; freed
 or unused pages will be omitted from the copy. This option will
 slow down the backup process as it is more CPU-intensive.
 Currently it fails if the environment has suffered a page leak.
+.TP
+.BR \-f
+Silently overwrite the target file, if it exists, instead of reaching an error.
 .TP
 .BR \-d
 Alters geometry to enforce the copy to be a dynamic size DB,
