--- a/docs/vocs/docs/pages/cli/op-reth/db.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/db.mdx
@@ -11,7 +11,7 @@ Usage: op-reth db [OPTIONS] <COMMAND>
 Commands:
   stats               Lists all the tables, their entry count and their size
   list                Lists the contents of a table
-  checksum            Calculates the content checksum of a table
+  checksum            Calculates the content checksum of a table or static file segment
   diff                Create a diff between two database tables or two entire databases
   get                 Gets the content of a table for the given key
   drop                Deletes all database entries
