--- a/docs/vocs/docs/pages/cli/op-reth/db/checksum/static-file.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/db/checksum/static-file.mdx
@@ -1,19 +1,34 @@
-# reth db checksum
+# op-reth db checksum static-file
 
-Calculates the content checksum of a table or static file segment
+Calculates the checksum of a static file segment
 
 ```bash
-$ reth db checksum --help
+$ op-reth db checksum static-file --help
 ```
 ```txt
-Usage: reth db checksum [OPTIONS] <COMMAND>
+Usage: op-reth db checksum static-file [OPTIONS] <SEGMENT>
 
-Commands:
-  mdbx         Calculates the checksum of a database table
-  static-file  Calculates the checksum of a static file segment
-  help         Print this message or the help of the given subcommand(s)
+Arguments:
+  <SEGMENT>
+          The static file segment
+
+          Possible values:
+          - headers:             Static File segment responsible for the `CanonicalHeaders`, `Headers`, `HeaderTerminalDifficulties` tables
+          - transactions:        Static File segment responsible for the `Transactions` table
+          - receipts:            Static File segment responsible for the `Receipts` table
+          - transaction-senders: Static File segment responsible for the `TransactionSenders` table
+          - account-change-sets: Static File segment responsible for the `AccountChangeSets` table
 
 Options:
+      --start-block <START_BLOCK>
+          The block number to start from (inclusive)
+
+      --end-block <END_BLOCK>
+          The block number to end at (inclusive)
+
+      --limit <LIMIT>
+          The maximum number of rows to checksum
+
   -h, --help
           Print help (see a summary with '-h')
 
@@ -23,9 +38,9 @@ Datadir:
           Possible values are either a built-in chain or the path to a chain specification file.
 
           Built-in chains:
-              mainnet, sepolia, holesky, hoodi, dev
+              optimism, optimism_sepolia, optimism-sepolia, base, base_sepolia, base-sepolia, arena-z, arena-z-sepolia, automata, base-devnet-0-sepolia-dev-0, bob, boba-sepolia, boba, camp-sepolia, celo, creator-chain-testnet-sepolia, cyber, cyber-sepolia, ethernity, ethernity-sepolia, fraxtal, funki, funki-sepolia, hashkeychain, ink, ink-sepolia, lisk, lisk-sepolia, lyra, metal, metal-sepolia, mint, mode, mode-sepolia, oplabs-devnet-0-sepolia-dev-0, orderly, ozean-sepolia, pivotal-sepolia, polynomial, race, race-sepolia, radius_testnet-sepolia, redstone, rehearsal-0-bn-0-rehearsal-0-bn, rehearsal-0-bn-1-rehearsal-0-bn, settlus-mainnet, settlus-sepolia-sepolia, shape, shape-sepolia, silent-data-mainnet, snax, soneium, soneium-minato-sepolia, sseed, swan, swell, tbn, tbn-sepolia, unichain, unichain-sepolia, worldchain, worldchain-sepolia, xterio-eth, zora, zora-sepolia, dev
 
-          [default: mainnet]
+          [default: optimism]
 
 Logging:
       --log.stdout.format <FORMAT>
