refactor: use to_settings().merge() pattern for storage settings
- Add StorageSettings::merge() to combine settings
- Change RocksDbArgs::apply_to_settings() to to_settings()
- Update NodeConfig::storage_settings() to use the cleaner pattern:
  self.static_files.to_settings().merge(self.rocksdb.to_settings())

--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -898,6 +898,11 @@ Pruning:
           Prune storage history before the specified block number. The specified block number is not pruned
 
 RocksDB:
+      --rocksdb.all
+          Route all supported tables to `RocksDB` instead of MDBX.
+
+          This enables RocksDB for tx-hash, storages-history, and account-history tables. Cannot be combined with individual flags set to false.
+
       --rocksdb.tx-hash <TX_HASH>
           Route tx hash -> number table to `RocksDB` instead of MDBX
 
