--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -898,6 +898,11 @@ Pruning:
           Prune storage history before the specified block number. The specified block number is not pruned
 
 RocksDB:
+      --rocksdb.all
+          Route all supported tables to `RocksDB` instead of MDBX.
+
+          This enables RocksDB for tx-hash, storages-history, and account-history tables. Cannot be combined with individual flags set to false.
+
       --rocksdb.tx-hash <TX_HASH>
           Route tx hash -> number table to `RocksDB` instead of MDBX
 
