docs: update CLI docs for rocksdb help text formatting

--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -901,7 +901,7 @@ RocksDB:
       --rocksdb.all
           Route all supported tables to `RocksDB` instead of MDBX.
 
-          This enables RocksDB for tx-hash, storages-history, and account-history tables. Cannot be combined with individual flags set to false.
+          This enables `RocksDB` for `tx-hash`, `storages-history`, and `account-history` tables. Cannot be combined with individual flags set to false.
 
       --rocksdb.tx-hash <TX_HASH>
           Route tx hash -> number table to `RocksDB` instead of MDBX
